[feat] second app

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:first-app": "ng build --project first-app",
     "build:second-app": "ng build --project second-app",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:first-app": "ng test --watch false --code-coverage true --browsers ChromeHeadless"
   },
   "private": true,
   "dependencies": {
