--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
   "hosting": {
+    "predeploy": "npm run build:first-app",
     "public": "build/first-app",
     "ignore": [
       "firebase.json",
