--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "ng test",
     "test:first-app": "ng test --project first-app --watch false --code-coverage true --browsers ChromeHeadless",
     "test:second-app": "ng test --project second-app --watch false --code-coverage true --browsers ChromeHeadless",
-    "firebase:first-app": "npm install && npm run build:first-app"
+    "firebase:first-app": "npm install && npm run build:first-app",
+    "firebase:second-app": "npm install && npm run build:second-app"
   },
   "private": true,
   "dependencies": {
